istio-mesh/2_service/hello-world/5_virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        #    - uri:
        #        exact: /hello
        - headers:
            version:
              exact: v1
      route:
        - destination:
            host: helloworld
            subset: v1
            port:
              number: 5000
    - route:
        - destination:
            host: helloworld
            subset: v2
            port:
              number: 5000
